Se agrego el metodo delete

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 <h1>AXIOS CRUD</h1>
-<button id="button1">Boton1</button>
-<button id="button2">Boton2</button>
-<button id="button3">Boton3</button>
-<button id="button4">Boton4</button>
+<button id="button1">Get</button>
+<button id="button2">Post</button>
+<button id="button3">Put</button>
+<button id="button4">Patch</button>
+<button id="button5">Delete</button>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="js/main.js"></script>
